fix link alignment in header

--- a/dash_docs/assets/override.css
+++ b/dash_docs/assets/override.css
@@ -198,7 +198,8 @@ summary:hover {
   letter-spacing: 0.5px;
   color: rgb(81, 104, 131);
   font-size: 16px;
-  vertical-align: middle;
+  line-height: 60px;
+  margin-right: 20px;
 }
 
 .header .links .link {
